Enable native access for j25+ in java args